set(LIB_NAME transcoder)

#add_library(transcoder transcoder.cpp)
#include_directories(${LIBAVCODEC_INCLUDE_DIR} ${LIBAVFORMAT_INCLUDE_DIR} ${LIBAVUTIL_INCLUDE_DIR} ${LIBSWRESAMPLE_INCLUDE_DIR})

#aux_source_directory(. SOURCES)

#add_executable(${LIB_NAME} ${SOURCES})

#target_link_libraries(${LIB_NAME} ${LIBAVCODEC_LIBRARY} ${LIBAVFORMAT_LIBRARY} ${LIBAVUTIL_LIBRARY} ${LIBSWRESAMPLE_LIBRARY})

#install(TARGETS ${LIB_NAME} DESTINATION bin)
